--- a/views/partials/blog-card.ejs
+++ b/views/partials/blog-card.ejs
@@ -6,7 +6,7 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">
-                    <%= blogtitle %>
+                    <a style="text-decoration: none;"  href="/blogs/<%= blogid %>"><%= blogtitle %></a>
                 </h5>
                 <p class="card-text"><%= blogdetail %></p>
             </div>
