--- a/views/partials/blog-menu.ejs
+++ b/views/partials/blog-menu.ejs
@@ -1,6 +1,10 @@
 <div class="list-group">
+    <a href="/blogs" class="list-group-item list-group-item-action ">Tüm Kurslar</a>
     <% categories.forEach(category => {%>
-        <a href="" class="list-group-item list-group-item-action "><%= category %></a>
+        <a href="/blogs/category/<%= category.categoryid %>"
+             class="list-group-item list-group-item-action
+             <%= selectedCategory == category.categoryid ? "active":" " %> "
+             ><%=  category.categoryname%></a>
         <% }); %>
         
     
