--- a/views/users/blogs.ejs
+++ b/views/users/blogs.ejs
@@ -11,29 +11,32 @@
         <div class="row">
             <div class="col-md-3">
                 <div class="list-group">
-                    <% categories.forEach(category => {%>
-                        <a href="" class="list-group-item list-group-item-action "><%= category %></a>
-                        <% }); %>
+                    <%- include('../partials/blog-menu', categories) %>
                         
                     
                 </div>
             </div>
             <div class="col-md-9">
                 <h1 class="h3 mb-3"><%= title %></h1>
+                <% if (blogs.length ==0) { %>
+                    <%- include('../partials/no-products') %>
+                <% } %>
+
+
                 <% blogs.forEach(blog => { %>
                     <%- include('../partials/blog-card',blog) %>
                 <% }) %>
-                
+                <% if (blogs.length >2) { %>
+                    <!-- pagination -->
+                      <%- include('../partials/paginations') %>
+                  <% } %>
 
                 
             </div>
         </div>
     </div>
 
-<% if (blogs.length >2) { %>
-  <!-- pagination -->
-    <%- include('../partials/paginations') %>
-<% } %>
+
    
 
 </body>
