--- a/views/admin/blog-edit.ejs
+++ b/views/admin/blog-edit.ejs
@@ -1,12 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <%- include('../partials/head') %>
 </head>
 <body>
-    admin blog edit
+    
+<%- include('../partials/nav') %>
+
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-12 mt-3">
+                <form   method="post">
+                    <div class="row mb-3">
+                        <label for="baslik" class="col-sm-2 col-form-label">Başlık</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="baslik" name="baslik" value="<%=blog.blogtitle  %>">
+                        </div>
+                        
+                    </div>
+                    <div class="row mb-3">
+                        <label for="aciklama" class="col-sm-2 col-form-label">Açıklama</label>
+                        <div class="col-sm-8">
+                            <textarea name="aciklama"   class="form-control" rows="10"><%= blog.blogdetail %>
+                            </textarea>
+                        </div>
+                    </div>
+                    
+                    <div class="row mb-3">
+                        <label for="resim" class="col-sm-2 col-form-label">Resim</label>
+                        <div class="col-sm-8">
+                            <input type="text" class="form-control" id="resim" name="resim" value="<%=blog.resim  %>">
+                        </div>
+                        
+                    </div>
+                    <div class="row mb-3">
+                        <label for="kategori" class="col-sm-2 col-form-label">Kategori</label>
+                        <div class="col-sm-8">
+                            <select name="kategori" id="kategori" class="form-control">
+                                <option value="-1"  selected>Seçiniz</option>
+                                <% categories.forEach(category => { %>
+                                 <option value="<%= category.categoryid %>"><%= category.categoryname %></option>
+                                <% }) %>
+                            <script>
+                                document.querySelector("#kategori").value = "<%= blog.categoryid %>";
+                            </script>
+                            </select>
+                            
+                        </div>
+                        
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-sm-8 offset-sm-2">
+                            <div class="form-check">
+                                <input class="form-check-input col-sm-2" type="checkbox" id="anasayfa" name="anasayfa" <%= blog.anasayfa? "checked":"" %>/>
+                                <label class="form-check-label col-sm-8" for="anasayfa">
+                                 Anasayfa
+                                </label>
+                              </div>
+                        </div>
+                        
+                    </div>
+                    <div class="row mb-3">
+                        <div class="col-sm-8 offset-sm-2">
+                            <div class="form-check">
+                                <input class="form-check-input col-sm-2" type="checkbox" id="onay" name="onay" <%= blog.onay? "checked":"" %>/>
+                                <label class="form-check-label col-sm-8" for="onay">
+                                 Onay
+                                </label>
+                              </div>
+                        </div>
+                        
+                    </div>
+                    <div class="row mb-3"></div>
+                        <div class="col-sm-8 offset-sm-2">
+                            <button type="submit" class="btn btn-primary">Kaydet</button>
+                        </div>
+                        
+                    </div>
+                
+                </form>
+            </div>
+        </div>
+        
+    </div>  
+
+
+
 </body>
 </html>
