--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -6,7 +6,16 @@
                 <a href="/blogs" class="nav-link">Blog Listesi</a>
             </li>
             <li class="nav-item"></li>
-                <a href="/blogs" class="nav-link">Admin Blogs</a>
+                <a href="/admin/blogs" class="nav-link">Admin Blogs</a>
+            </li>
+            <li class="nav-item"></li>
+                <a href="/admin/blog/create" class="nav-link">Admin Blog Create</a>
+            </li>
+            <li class="nav-item"></li>
+                <a href="/admin/category" class="nav-link">Admin Category</a>
+            </li>
+            <li class="nav-item"></li>
+                <a href="/admin/category/create" class="nav-link">Admin Category Create</a>
             </li>
         </ul>
     </div>
