silme sayfasının eklenmesi

--- a/views/admin/blog-list.ejs
+++ b/views/admin/blog-list.ejs
@@ -26,7 +26,7 @@
                                 <td><img src="/static/images/<%= blog.resim %>" alt="" class="img-fluid"></td>
                                 <td><%= blog.blogtitle %></td>
                                 <td><a class="btn btn-sm btn-primary" href="/admin/blogs/<%= blog.blogid %>">edit</a>
-                                    <a class="btn btn-sm btn-danger" href="/admin/blogs/<%= blog.blogid %>">delete</a>
+                                    <a class="btn btn-sm btn-danger" href="/admin/blog/delete/<%= blog.blogid %>">delete</a>
                                 </td>
                                 
                             </tr>
