--- a/views/partials/blog-menu.ejs
+++ b/views/partials/blog-menu.ejs
@@ -1,9 +1,9 @@
 <div class="list-group">
     <a href="/blogs" class="list-group-item list-group-item-action ">Tüm Kurslar</a>
     <% categories.forEach(category => {%>
-        <a href="/blogs/category/<%= category.id %>"
+        <a href="/blogs/category/<%= category.url %>"
              class="list-group-item list-group-item-action
-             <%= selectedCategory == category.id ? "active":" " %> "
+             <%= selectedCategory == category.url ? "active":" " %> "
              ><%=  category.categoryname%></a>
         <% }); %>
         
