--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,18 +5,39 @@
             <li class="nav-item">
                 <a href="/blogs" class="nav-link">Blog Listesi</a>
             </li>
-            <li class="nav-item"></li>
-                <a href="/admin/blogs" class="nav-link">Admin Blogs</a>
-            </li>
-            <li class="nav-item"></li>
-                <a href="/admin/blog/create" class="nav-link">Admin Blog Create</a>
-            </li>
-            <li class="nav-item"></li>
-                <a href="/admin/categories" class="nav-link">Admin Category</a>
-            </li>
-            <li class="nav-item"></li>
-                <a href="/admin/category/create" class="nav-link">Admin Category Create</a>
-            </li>
+            <% if (typeof isAuth != "undefined" && isAuth == 1) { %>
+             
+                <li class="nav-item"></li>
+                    <a href="/admin/blogs" class="nav-link">Admin Blogs</a>
+                </li>
+                <li class="nav-item"></li>
+                    <a href="/admin/blog/create" class="nav-link">Admin Blog Create</a>
+                </li>
+                <li class="nav-item"></li>
+                    <a href="/admin/categories" class="nav-link">Admin Category</a>
+                </li>
+                <li class="nav-item"></li>
+                    <a href="/admin/category/create" class="nav-link">Admin Category Create</a>
+                </li>
+            <% } %>
+        </ul>
+
+        <ul class="navbar-nav ms-auto">
+            <% if (typeof isAuth != "undefined" && isAuth == 1) { %>
+                <li class="nav-item"></li>
+                    <a href="/account/logout" class="nav-link">Logout</a>
+                </li>
+                <% } else { %>
+                    <li class="nav-item">
+                        <a href="/account/login" class="nav-link">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/account/register" class="nav-link">Register</a>
+                    </li>
+                    <% } %> 
+                 
+                
+                
         </ul>
     </div>
 </nav>
