--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
             <li class="nav-item">
                 <a href="/blogs" class="nav-link">Blog Listesi</a>
             </li>
-            <% if (typeof isAuth != "undefined" && isAuth == 1) { %>
+            <% if (isAuth) { %>
              
                 <li class="nav-item"></li>
                     <a href="/admin/blogs" class="nav-link">Admin Blogs</a>
@@ -23,7 +23,10 @@
         </ul>
 
         <ul class="navbar-nav ms-auto">
-            <% if (typeof isAuth != "undefined" && isAuth == 1) { %>
+            <% if (isAuth) { %>
+                <!-- <li class="nav-item">
+                    <a href="/account/index" class="nav-link"></a>
+                </li> -->
                 <li class="nav-item"></li>
                     <a href="/account/logout" class="nav-link">Logout</a>
                 </li>
