--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -14,26 +14,22 @@
             <% if (typeof message !="undefined") { %>
              <div class="alert alert-<%= message.class %>"><%= message.text %></div>
             <% } %>
-                <form   method="post"   >
+                <form   method="post" action="/account/new-password"  >
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <div class="row mb-3">
-                        <label for="email" class="col-sm-2 col-form-label">Email</label>
-                        <div class="col-sm-8">
-                            <input type="email" class="form-control" id="email" name="email">
-                        </div>
-                    </div>
-                
+                    <input type="hidden" name="userId" value="<%= userId %>">
+                    <input type="hidden" name="token" value="<%= token %>">
                     <div class="row mb-3">
                         <label for="baslik" class="col-sm-2 col-form-label">Password</label>
                         <div class="col-sm-8">
                             <input type="password" class="form-control" id="password" name="password">
                         </div>
                     </div>
+
                     
+
                     <div class="row mb-3">
                         <div class="col-sm-8 offset-sm-2">
-                            <button type="submit" class="btn btn-primary">Oturum aç</button>
-                            <a href="reset-password" class="btn btn-link">Parola Sıfırlama</a>
+                            <button type="submit" class="btn btn-primary">Parolanı Güncelle</button>
                         </div>
                         
                     </div>
