--- a/views/auth/reset-password.ejs
+++ b/views/auth/reset-password.ejs
@@ -22,18 +22,10 @@
                             <input type="email" class="form-control" id="email" name="email">
                         </div>
                     </div>
-                
-                    <div class="row mb-3">
-                        <label for="baslik" class="col-sm-2 col-form-label">Password</label>
-                        <div class="col-sm-8">
-                            <input type="password" class="form-control" id="password" name="password">
-                        </div>
-                    </div>
-                    
+
                     <div class="row mb-3">
                         <div class="col-sm-8 offset-sm-2">
-                            <button type="submit" class="btn btn-primary">Oturum aç</button>
-                            <a href="reset-password" class="btn btn-link">Parola Sıfırlama</a>
+                            <button type="submit" class="btn btn-primary">Parolanı Sıfırla</button>
                         </div>
                         
                     </div>
