yetkilerin tanılanması ve kullanıcılar listesinin eklenmesi

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -19,6 +19,12 @@
                 <li class="nav-item"></li>
                     <a href="/admin/category/create" class="nav-link">Admin Category Create</a>
                 </li>
+                <li class="nav-item"></li>
+                    <a href="/admin/roles" class="nav-link">Roles</a>
+                </li>
+                <li class="nav-item"></li>
+                    <a href="/admin/users" class="nav-link">Users</a>
+                </li>
             <% } %>
         </ul>
 
