--- a/views/admin/role-edit.ejs
+++ b/views/admin/role-edit.ejs
@@ -12,11 +12,11 @@
             <div class="col-md-12 mt-3">
                 <form   method="post">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                    <input type="hidden" name="categoryid" value="<%= categories.id %>">
+                    <input type="hidden" name="roleid" value="<%= role.id %>">
                     <div class="row mb-3">
-                        <label for="categoryname" class="col-sm-2 col-form-label">Kategori Adı</label>
+                        <label for="rolename" class="col-sm-2 col-form-label">Rol İsmi</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="categoryname" name="categoryname" value="<%=categories.categoryname %>">
+                            <input type="text" class="form-control" id="rolename" name="rolename" value="<%= role.rolename %>">
                         </div>
                         
                     </div>
@@ -29,29 +29,29 @@
                     </div>
                 
                 </form>
-                <p>Blog Sayısı: <%= countBlog %></p>
-                <table class="table table-bordered table-striped">
+    
+                <table class="table table-bordered table-striped mt-3">
                     <thead>
                         <tr>
                           <th scope="col" style="width: 50px;">Id</th>
-                          <th scope="col" style="width: 150px; ">Resim</th>
-                          <th scope="col">Başlık</th>
+                          <th scope="col" style="width: 150px; ">Username</th>
+                          <th scope="col">Email</th>
                           <th scope="col" style="width: 200px; "></th>
                         </tr>
                       </thead>
                       <tbody>
-                        <% blogs.forEach(blog => { %>
+                        <% users.forEach(user => { %>
                             <tr>
-                                <td><%= blog.dataValues.id %></td>
-                                <td><img src="/static/images/<%= blog.dataValues.resim %>" alt="" class="img-fluid"></td>
-                                <td><%= blog.dataValues.blogtitle %></td>
-                                <td><a class="btn btn-sm btn-primary" href="/admin/blogs/<%= blog.dataValues.id %>">edit</a>
+                                <td><%= user.id %></td>
+                                <td><%= user.fullname %></td>
+                                <td><%= user.email%></td>
+                                <td><a class="btn btn-sm btn-primary" href="/admin/users/<%= user.id %>">Edit</a>
 
-                                    <form style="display: inline-block;" action="/admin/categories/remove" method="post">
+                                    <form style="display: inline-block; " action="/admin/roles/remove" method="post">
                                         <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                                        <input type="hidden" name="blogid" value="<%= blog.id %>">
-                                        <input type="hidden" name="categoryid" value="<%= categories.id %>">
-                                        <button class="btn btn-sm btn-danger" type="submit">Kategoriden çıkar</button>
+                                        <input type="hidden" name="roleid" value="<%= role.id %>">
+                                        <input type="hidden" name="userid" value="<%= user.id %>">
+                                        <button class="btn btn-sm btn-danger" type="submit">Rolü  çıkar</button>
                                     </form>
                                 </td>
                                 
