--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -5,7 +5,7 @@
             <li class="nav-item">
                 <a href="/blogs" class="nav-link">Blog Listesi</a>
             </li>
-            <% if (isAuth) { %>
+            <% if (isAdmin || isModerator) { %>
              
                 <li class="nav-item"></li>
                     <a href="/admin/blogs" class="nav-link">Admin Blogs</a>
@@ -13,6 +13,8 @@
                 <li class="nav-item"></li>
                     <a href="/admin/blog/create" class="nav-link">Admin Blog Create</a>
                 </li>
+                <% } %>
+                <% if (isAdmin) { %>
                 <li class="nav-item"></li>
                     <a href="/admin/categories" class="nav-link">Admin Category</a>
                 </li>
@@ -29,7 +31,7 @@
         </ul>
 
         <ul class="navbar-nav ms-auto">
-            <% if (isAuth) { %>
+            <% if (isAdmin || isModerator) { %>
                 <li class="nav-item">
                     <a href="/account/index" class="nav-link"><%= fullname %></a>
                 </li>
