--- a/views/admin/blog-create.ejs
+++ b/views/admin/blog-create.ejs
@@ -10,23 +10,26 @@
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-12 mt-3">
+                <% if (typeof message !="undefined") { %>
+                    <div class="alert alert-<%= message.class %>"><%= message.text %></div>
+                   <% } %>
                 <form   method="post" enctype="multipart/form-data" action="/admin/blog/create?_csrf=<%= csrfToken %>">
                     <div class="row mb-3">
                         <label for="baslik" class="col-sm-2 col-form-label">Başlık</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="baslik" name="baslik">
+                            <input type="text" class="form-control" id="baslik" name="baslik" value="<%= typeof  values!= "undefined" ? values.baslik :""%>">
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="altbaslik" class="col-sm-2 col-form-label">Alt Başlık</label>
                         <div class="col-sm-8">
-                            <textarea name="altbaslik"  class="form-control" rows="5"></textarea>
+                            <textarea name="altbaslik"  class="form-control" rows="5" ><%= typeof  values!= "undefined" ? values.altbaslik :""%></textarea>
                         </div>
                     </div>
                     <div class="row mb-3">
                         <label for="aciklama" class="col-sm-2 col-form-label">Açıklama</label>
                         <div class="col-sm-8">
-                            <textarea name="aciklama" id="editor"  class="form-control" rows="10"></textarea>
+                            <textarea name="aciklama" id="editor"  class="form-control" rows="10" ><%= typeof  values!= "undefined" ? values.aciklama :""%></textarea>
                         </div>
                     </div>
                     
